# icma-website

./: .gitignore  LICENSE.md  Procfile  README.md  __init__.py  pyproject.toml  requirements.txt
.github/: codecov.yml
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: branch-naming.yml  python-app.yml  tests-linter.yml
blog/: __init__.py  auth.py  blog.py  cli.py  content.py  db.py  nav.py  newsletter.py  page.py  schema.sql
blog/static/: colors.css  style.css
blog/static/style/: colors.css
blog/templates/: base.html  donate.html  footer.html
blog/templates/blog/: create.html  index.html  update.html
blog/templates/content/: about.html  projects.html  resources.html
blog/templates/newsletter/: index.html  signup.html
blog/templates/page/: create.html  index.html  update.html
flaskr/: __init__.py  auth.py
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_cli.py  test_create_newsletter_subscriber.py  test_create_user.py  test_create_user_email.py  test_db.py  test_db_adapters_converters.py  test_factory.py  test_static_content.py
tests/integration/: test_i_blog.py  test_i_create_user.py  test_i_db_connection.py  test_i_newsletter.py
tests/unit/: test_cli.py  test_create_newsletter_subscriber.py  test_create_user.py  test_db_adapters_converters.py  test_login_logout.py
