[project]
name = "blog"
version = "1.0.0"
description = "Source for the ICMA collective's website."
dependencies = [
    "flask",
    "pytest",
    "coverage",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["blog"]
