[project]
name = "blog"
version = "1.0.0"
description = "Source for the ICMA collective's website."
dependencies = [
    # Web server
    "flask",
    # Forms
    "flask-ckeditor[all]",
    # "wtforms", # we should use this eventually for validation etc
    # Tests
    "pytest",
    "coverage",
    "coverage-badge",
    # Other
    "bleach", # for the flask_ckeditor.utils.cleanify polyfill in blog.py, remove when flask.ckeditor>=0.5.2
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["blog", "tests"]